[package]
edition = "2021"
name = "embassy-stm32u5-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32u5g9zj to your chip name, if necessary.
embassy-stm32 = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", rev = "1b44034", features = ["defmt", "unstable-pac", "stm32u575zi", "time-driver-any", "memory-x" ]  }
embassy-sync = { version = "0.6.1", git = "https://github.com/embassy-rs/embassy", rev = "1b44034", features = ["defmt"] }
embassy-executor = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", rev = "1b44034", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", rev = "1b44034", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", rev = "1b44034", features = ["defmt"] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "1b44034" }
embassy-net = {  version = "0.6.0", git = "https://github.com/embassy-rs/embassy", rev = "1b44034", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }


defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
embedded-graphics = { version = "0.8.1" }
tinybmp = { version = "0.6.0" }

micromath = "2.0.0"
embedded-alloc = "0.6.0"
coap-lite = {version = "0.13.1", default-features=false, features = ["udp"]}
usbd-ethernet = "0.3.0"
usb-device = "0.3.2"
static_cell = "2.1.0"
rand_core = "=0.6.3"
embedded-io-async = "0.6.1"
smoltcp = {version =  "0.12.0", default-features=false, features = ["socket-tcp", "socket-udp", "proto-ipv4", "proto-ipv6"] }
async-trait = "0.1.86"

[features]
## Use secure registers when TrustZone is enabled
trustzone-secure = ["embassy-stm32/trustzone-secure"]

[profile.release]
debug = 2
