[package]
edition = "2021"
name = "ibus-in-rust"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
#embassy-stm32 = { git = "https://github.com/osobiehl/embassy", rev = "2679bff", features = ["defmt", "unstable-pac", "stm32u575zi", "time-driver-any", "memory-x" ]  }
#embassy-sync = { git = "https://github.com/osobiehl/embassy", rev = "2679bff" }
#embassy-executor = { version = "0.7.0", git = "https://github.com/osobiehl/embassy", rev = "2679bff", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "defmt"] }
#embassy-time = { version = "0.4.0", git = "https://github.com/osobiehl/embassy", rev = "2679bff", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
#embassy-usb = { version = "0.4.0", git = "https://github.com/osobiehl/embassy", rev = "2679bff", features = ["defmt"] }
#embassy-futures = { version = "0.1.0", git = "https://github.com/osobiehl/embassy", rev = "2679bff" }
#embassy-net = {  version = "0.6.0", git = "https://github.com/osobiehl/embassy", rev = "2679bff", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }
#
#embassy-net-driver-channel= {   git = "https://github.com/osobiehl/embassy", rev = "2679bff", features = [] }
#embassy-usb-driver = { git = "https://github.com/osobiehl/embassy", rev = "2679bff", features = [] }
#
#embassy-usb-synopsys-otg = { git = "https://github.com/osobiehl/embassy", rev = "2679bff", features = [] }

embassy-stm32 = { path = "../embassy/embassy-stm32/", features = ["defmt", "unstable-pac", "stm32u575zi", "time-driver-any", "memory-x" ]  }
embassy-sync = { path = "../embassy/embassy-sync/" }
embassy-executor = { version = "0.7.0", path = "../embassy/embassy-executor", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0", path = "../embassy/embassy-time/", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.4.0", path = "../embassy/embassy-usb", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures" }
embassy-net = {  version = "0.6.0", path = "../embassy/embassy-net", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }

embassy-net-driver-channel= {   path = "../embassy/embassy-net-driver-channel", features = [] }
embassy-usb-driver = { path = "../embassy/embassy-usb-driver/", features = [] }

embassy-usb-synopsys-otg = { path = "../embassy/embassy-usb-synopsys-otg/", features = [] }


defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
embedded-graphics = { version = "0.8.1" }
tinybmp = { version = "0.6.0" }

micromath = "2.0.0"
embedded-alloc = "0.6.0"
coap-lite = {version = "0.13.1", default-features=false, features = ["udp"]}
usbd-ethernet = "0.3.0"
usb-device = "0.3.2"
static_cell = "2.1.0"
rand_core = "=0.6.3"
embedded-io-async = "0.6.1"
smoltcp = {version =  "0.12.0", default-features=false, features = ["socket-tcp", "socket-udp", "proto-ipv4", "proto-ipv6"] }
async-trait = "0.1.86"
serial-line-ip = "0.5.0"

[features]
## Use secure registers when TrustZone is enabled
trustzone-secure = ["embassy-stm32/trustzone-secure"]

[profile.release]
debug = 2

[profile.dev]
opt-level = 1
debug = 2
